--- a/public/locales/ru.json
+++ b/public/locales/ru.json
@@ -2,45 +2,48 @@
   "Navigation": {
     "home": "Главная",
     "about": "О Нас",
-    "products": "Продукция",
+    "products": "Продукты",
     "gallery": "Галерея",
-    "contact": "Контакты"
+    "contact": "Контакт"
   },
   "Hero": {
-    "title": "Свежие Фрукты и Овощи из Марокко для Всего Мира",
-    "subtitle": "Продукция высшего качества прямо с наших ферм в Агадире.",
+    "title": "Свежие Фрукты и Овощи из Марокко в Мир",
+    "subtitle": "Продукция премиум-качества прямо с наших ферм в Агадире.",
     "cta_products": "Наша Продукция",
-    "cta_contact": "Связаться с Нами"
+    "cta_contact": "Свяжитесь С Нами"
   },
   "About": {
     "title": "Кто Мы",
     "description": "Имея более 35 лет опыта, HOUKMI EXPORT является лидером в производстве и экспорте цитрусовых и свежих овощей.",
-    "mission": "Наша миссия - предоставлять лучшее от природы с бескомпромиссным качеством."
+    "mission": "Наша миссия - предоставлять лучшее от природы с безупречным качеством."
   },
   "Gallery": {
-    "description": "Взгляд на наши фермы, упаковочные цеха и преданную команду, гарантирующую качество в каждой коробке."
+    "description": "Взгляд на наши фермы, упаковочные предприятия и преданную команду, обеспечивающую качество в каждой коробке."
   },
   "Products": {
     "title": "Наш Урожай",
     "view_all": "Посмотреть Все Продукты",
     "tomatoes": "Свежие Помидоры",
     "oranges": "Сладкие Апельсины",
-    "peppers": "Хрустящий Перец",
+    "peppers": "Хрустящие Перцы",
     "watermelons": "Сочные Арбузы"
   },
   "Contact": {
-    "title": "Связаться с Нами",
+    "title": "Свяжитесь С Нами",
     "description": "Мы всегда готовы обсудить новые возможности. Свяжитесь с нами для заказов или запросов.",
-    "location": "Промышленная зона Агадира, Марокко",
+    "locationLabel": "Наше Местоположение",
+    "location": "Промышленная Зона Агадира, Марокко",
+    "emailLabel": "Напишите Нам",
+    "phoneLabel": "Позвоните Нам",
     "name": "Имя",
-    "email": "Email",
+    "email": "Эл. Почта",
     "message": "Сообщение",
     "send": "Отправить Сообщение"
   },
   "Footer": {
-    "description": "Доставляем свежие фрукты и овощи из Марокко к вашему столу. Качество и надежность с 1990 года.",
+    "description": "Доставляем самые свежие фрукты и овощи из Марокко на ваш стол. Качество и надежность с 1990 года.",
     "quick_links": "Быстрые Ссылки",
-    "contact_us": "Связаться с Нами",
+    "contact_us": "Свяжитесь С Нами",
     "rights": "Все права защищены."
   }
 }
