Translate About section badges in 6 languages + fix gradient colors

--- a/public/locales/de.json
+++ b/public/locales/de.json
@@ -15,7 +15,10 @@
   "About": {
     "title": "Wer Wir Sind",
     "description": "Mit über 35 Jahren Erfahrung ist HOUKMI EXPORT führend in der Produktion und im Export von Zitrusfrüchten und frischem Gemüse.",
-    "mission": "Unsere Mission ist es, das Beste der Natur mit kompromissloser Qualität zu liefern."
+    "mission": "Unsere Mission ist es, das Beste der Natur mit kompromissloser Qualität zu liefern.",
+    "experience": "+35 Jahre Erfahrung",
+    "farming": "Nachhaltige Landwirtschaft",
+    "globalReach": "Globale Reichweite"
   },
   "Gallery": {
     "description": "Ein Einblick in unsere Farmen, Verpackungsanlagen und das engagierte Team, das Qualität in jeder Kiste gewährleistet."
