--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -15,7 +15,10 @@
   "About": {
     "title": "Who We Are",
     "description": "With over 35 years of experience, HOUKMI EXPORT is a leader in the production and export of citrus fruits and fresh vegetables.",
-    "mission": "Our mission is to provide nature's best with uncompromised quality."
+    "mission": "Our mission is to provide nature's best with uncompromised quality.",
+    "experience": "35+ Years Experience",
+    "farming": "Sustainable Farming",
+    "globalReach": "Global Reach"
   },
   "Gallery": {
     "description": "A glimpse into our farms, packing facilities, and the dedicated team ensuring quality in every box."
