--- a/public/locales/ru.json
+++ b/public/locales/ru.json
@@ -15,7 +15,10 @@
   "About": {
     "title": "Кто Мы",
     "description": "Имея более 35 лет опыта, HOUKMI EXPORT является лидером в производстве и экспорте цитрусовых и свежих овощей.",
-    "mission": "Наша миссия - предоставлять лучшее от природы с безупречным качеством."
+    "mission": "Наша миссия - предоставлять лучшее от природы с безупречным качеством.",
+    "experience": "+35 Лет Опыта",
+    "farming": "Устойчивое Земледелие",
+    "globalReach": "Глобальный Охват"
   },
   "Gallery": {
     "description": "Взгляд на наши фермы, упаковочные предприятия и преданную команду, обеспечивающую качество в каждой коробке."
