Translate 'Detailed care in every harvest' caption in 6 languages

--- a/public/locales/de.json
+++ b/public/locales/de.json
@@ -18,7 +18,8 @@
     "mission": "Unsere Mission ist es, das Beste der Natur mit kompromissloser Qualität zu liefern.",
     "experience": "+35 Jahre Erfahrung",
     "farming": "Nachhaltige Landwirtschaft",
-    "globalReach": "Globale Reichweite"
+    "globalReach": "Globale Reichweite",
+    "imageCaption": "Sorgfältige Pflege bei jeder Ernte"
   },
   "Gallery": {
     "description": "Ein Einblick in unsere Farmen, Verpackungsanlagen und das engagierte Team, das Qualität in jeder Kiste gewährleistet."
