--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -18,7 +18,8 @@
     "mission": "Our mission is to provide nature's best with uncompromised quality.",
     "experience": "35+ Years Experience",
     "farming": "Sustainable Farming",
-    "globalReach": "Global Reach"
+    "globalReach": "Global Reach",
+    "imageCaption": "Detailed care in every harvest"
   },
   "Gallery": {
     "description": "A glimpse into our farms, packing facilities, and the dedicated team ensuring quality in every box."
