--- a/public/locales/es.json
+++ b/public/locales/es.json
@@ -18,7 +18,8 @@
     "mission": "Nuestra misión es proporcionar lo mejor de la naturaleza con una calidad inigualable.",
     "experience": "+35 Años de Experiencia",
     "farming": "Agricultura Sostenible",
-    "globalReach": "Alcance Global"
+    "globalReach": "Alcance Global",
+    "imageCaption": "Cuidado detallado en cada cosecha"
   },
   "Gallery": {
     "description": "Un vistazo a nuestras granjas, instalaciones de envasado y al equipo dedicado que garantiza la calidad en cada caja."
