--- a/public/locales/fr.json
+++ b/public/locales/fr.json
@@ -18,7 +18,8 @@
     "mission": "Notre mission est de fournir le meilleur de la nature avec une qualité inégalée.",
     "experience": "+35 Ans d'Expérience",
     "farming": "Agriculture Durable",
-    "globalReach": "Portée Mondiale"
+    "globalReach": "Portée Mondiale",
+    "imageCaption": "Un soin minutieux à chaque récolte"
   },
   "Gallery": {
     "description": "Un aperçu de nos fermes, installations d'emballage et de l'équipe dévouée garantissant la qualité dans chaque boîte."
