--- a/public/locales/it.json
+++ b/public/locales/it.json
@@ -18,7 +18,8 @@
     "mission": "La nostra missione è fornire il meglio della natura con qualità senza compromessi.",
     "experience": "+35 Anni di Esperienza",
     "farming": "Agricoltura Sostenibile",
-    "globalReach": "Portata Globale"
+    "globalReach": "Portata Globale",
+    "imageCaption": "Cura dettagliata in ogni raccolto"
   },
   "Gallery": {
     "description": "Uno sguardo alle nostre fattorie, strutture di confezionamento e al team dedicato che garantisce la qualità in ogni scatola."
