--- a/public/locales/ru.json
+++ b/public/locales/ru.json
@@ -18,7 +18,8 @@
     "mission": "Наша миссия - предоставлять лучшее от природы с безупречным качеством.",
     "experience": "+35 Лет Опыта",
     "farming": "Устойчивое Земледелие",
-    "globalReach": "Глобальный Охват"
+    "globalReach": "Глобальный Охват",
+    "imageCaption": "Тщательный уход за каждым урожаем"
   },
   "Gallery": {
     "description": "Взгляд на наши фермы, упаковочные предприятия и преданную команду, обеспечивающую качество в каждой коробке."
