--- a/public/locales/ru.json
+++ b/public/locales/ru.json
@@ -4,7 +4,8 @@
     "about": "О Нас",
     "products": "Продукты",
     "gallery": "Галерея",
-    "contact": "Контакт"
+    "contact": "Контакт",
+    "back_to_products": "Вернуться к Продуктам"
   },
   "Hero": {
     "title": "Свежие Фрукты и Овощи из Марокко в Мир",
@@ -49,5 +50,43 @@
     "quick_links": "Быстрые Ссылки",
     "contact_us": "Свяжитесь С Нами",
     "rights": "Все права защищены."
+  },
+  "ProductDetails": {
+    "about": "О Продукте",
+    "features": "Основные Характеристики",
+    "contact_us": "Свяжитесь с Нами для Заказов",
+    "back_to_products": "Вернуться к Продуктам",
+    "tomatoes_description": "Наши премиум-помидоры выращиваются на плодородных почвах Агадира, Марокко. Собранные в оптимальной спелости, они обладают исключительным вкусом, ярким цветом и плотной текстурой. Идеальны для свежего употребления, салатов или переработки.",
+    "tomatoes_features": [
+      "Выращены в оптимальном средиземноморском климате",
+      "Собраны вручную в оптимальной спелости",
+      "Богаты витаминами и антиоксидантами",
+      "Доступны круглый год",
+      "Сертифицированные стандарты качества"
+    ],
+    "oranges_description": "Сладкие, сочные апельсины из солнечных рощ Марокко. Наши апельсины известны своим идеальным балансом сладости и кислотности, идеальны для свежего сока или прямого употребления. Насыщены витамином C и натуральной пользой.",
+    "oranges_features": [
+      "100% натуральные, без искусственных обработок",
+      "Высокое содержание сока",
+      "Идеальный баланс сладости",
+      "Премиум-качество экспорта",
+      "Устойчивые методы ведения сельского хозяйства"
+    ],
+    "peppers_description": "Хрустящие, яркие перцы, выращенные с заботой на наших марокканских фермах. Доступны в нескольких сортах, наши перцы известны своей свежестью, хрустом и яркими цветами. Идеальны для приготовления, гриля или свежих салатов.",
+    "peppers_features": [
+      "Несколько цветовых сортов",
+      "Хрустящая текстура и свежий вкус",
+      "Богаты витаминами A и C",
+      "Тщательно отсортированы и упакованы",
+      "Увеличенный срок хранения"
+    ],
+    "watermelons_description": "Сочные, сладкие арбузы, выращенные под марокканским солнцем. Наши арбузы тщательно отбираются по сладости, хрустящей текстуре и яркой красной мякоти. Идеальны для жарких летних дней и здорового, освежающего угощения.",
+    "watermelons_features": [
+      "Естественно сладкие и освежающие",
+      "Высокое содержание воды для гидратации",
+      "Доступны бессемянные сорта",
+      "Тщательно собраны и транспортированы",
+      "Доступность в высокий сезон"
+    ]
   }
 }
