--- a/public/locales/ru.json
+++ b/public/locales/ru.json
@@ -88,5 +88,19 @@
       "Тщательно собраны и транспортированы",
       "Доступность в высокий сезон"
     ]
+  },
+  "Reviews": {
+    "title": "Отзывы клиентов",
+    "subtitle": "Нам доверяют европейские импортеры и оптовики",
+    "writeReview": "Написать отзыв",
+    "name": "Полное имя",
+    "company": "Название компании",
+    "country": "Страна",
+    "rating": "Рейтинг",
+    "comment": "Ваш комментарий",
+    "submit": "Отправить отзыв",
+    "success": "Спасибо! Ваш отзыв ожидает одобрения.",
+    "photo": "Загрузить фото (необязательно)",
+    "pending": "Отзыв ожидающий одобрения"
   }
 }
